@@ -20,6 +20,7 @@ search.button.disabled.tooltip=Search only possible in HEAD
 showlog.button.text=Show log
 showlog.button.tooltip=Show log for {0}
 stop-on-copy.button.text=Stop on copy
+paging.button.text=Paged result
 download.button.text=Download
 blame.button.text=Blame
 diffprev.button.text=Diff to previous
